2001-01-15  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* src/Codecs/XMLish.cc: Removed the XMLish codec.
	
	* src/*: Many changes to adopt modified object.
	
	* src/Message/Object.h (class Object): Added Karsten's modified
	Message::Object.

	* src/Codec.h, src/Factory.h, Codecs/*.cc: removed Metrics

	* .cvsignore, tests/.cvsignore, tests/Objects/.cvsignore,
	tutorial/.cvsignore: Added various files to be ignored.

	* configure.am, configure.in: Removed checks for libbz2 and libz.

2001-01-14  Al Riddoch  <ajr@ecs.soton.ac.uk>

	* *.am, *.in: Added spec, config script and autoconf macro
	from devel branch.

2001-01-14  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* src/Objects/Decoder.cc (ARR): Added return statement in if
	branch.

	* src/*: Made code ISO 14882:1998 compliant from what I can
	tell. Compiles with CVS gcc now.

	* src/Codec.h: Applied template instantiation technique as
	mentioned in HACKING.

	* src/: Removed Filter and Filters/ completely.

	* src/Net/Stream.cpp: Removed references to Filter.

	* *.cpp: Removed .cpp files.

2000-11-01  Al Riddoch  <ajr@ecs.soton.ac.uk>

	* Net/Stream.cc: Fixed negotiation so it is now possible for
	packed to get picked.
	  (Packed decoder appears to segfault though)
	